﻿0.6.6
=====

New Features:

  * Upgrade to Spring Framework 2.5.2.
  * Significant modifications to the parser to ensure that output exactly
    matches Mediawiki, including tag placement and newlines.
  * Unit test coverage has been significantly improved.
  * Support added for definition lists of the form "; term : definition".

Bugfixes:
  * Unbalanced / unclosed HTML tags will now be automatically closed by the
    parser.  Originally reported by Michael Habbert.


0.6.5
=====

New Features:

  * Support added for Sybase ASA (dallas).
  * The spam filter will now also check descriptions for uploaded files in
    order to block spam from bots using this path.
  * Updated spam filter patterns.

Bugfixes:
  * Fix a problem that could cause HSQL to generate locking errors on context
    reload (dallas).
  * Resolve a problem that could cause database connection lockups during
    setup on MS SQL and some other databases.  Reported by multiple users, with
    significant debugging help provided by dallas.
  * Fix a regression that broke the Special:Manage page.  Bug reported with a
    suggested fix by tfschueller.
  * Fix a regression that broke the Special:Move page (dallas).
  * Resolve a logic error that prevented topics from being retrieved from the
    cache at appropriate times.  Pointed out by Jim.
  * The "Special" tab on the Special:Contributions page did not have the
    correct URL.  Reported by yesesnono.

Translation Updates:

  * Updated Hungarian translations (bdanee).


0.6.4
=====

New Features:

  * Update and reorganize the monolithic jamwiki project structure into the
    more modular jamwiki-core, jamwiki-web and jamwiki-war sub-projects.  As
    a result of this change it is now possible to use the JAMWiki parser as a
    standalone library.
  * Update the parser to generate syntax that more exactly matches the parsed
    HTML output of Mediawiki.
  * Significantly improve the JAMWiki unit-test coverage.