@@ -10,6 +10,7 @@ admin.cache.help.individualsize=The maximum number of elements that can be cache
 admin.cache.help.totalsize=The maximum number of elements that can be cached in memory for all caches.<br />A larger value improves performance but increases system memory usage.
 admin.cache.message.clearfailed=Failure while clearing the cache\: {0}.
 admin.caption.defaulttopic=Default topic
+admin.caption.exportcsv=Export internal database to CSV
 admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=File-system directory
 admin.caption.imageresize=Image resize increment (pixels)
@@ -33,6 +34,7 @@ admin.header.rss=RSS settings
 admin.header.upload=File upload settings
 admin.help.clearcache=Clearing the cache will force any values stored in memory to be cleared.  This should only be necessary if a record is updated outside of the normal wiki processes.
 admin.help.defaulttopic=The default topic is the root topic used for <b>new</b> virtual wikis.  To change the default topic for <b>existing</b> virtual wikis use the admin maintenance tools.
+admin.help.exportcsv=If using an internal database, this command will export that data to CSV files.  This functionality might be needed to migrate data to a new database or to create a human-readable snapshot of the current wiki data.
 admin.help.filedir=An existing directory in which JAMWiki system files can be stored.
 admin.help.imageresize=Image resizing can slow down the wiki, so images are resized in increments and then further scaled in the user's web browser.  A larger resize increment improves performance but reduces image quality.
 admin.help.logoimage=This value specifies the logo for the wiki.  Values should be specified with respect to the webapp context root's <code>images</code> directory.
@@ -60,6 +62,8 @@ admin.maintenance.title=Maintenance
 admin.message.cache=Cache successfully cleared.
 admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=Changes saved
+admin.message.exportcsv=Internal database data has been exported to CSV files.  Files can be found in the {0} directory.
+admin.message.exportcsvfail=Failure while exporting internal database data to CSV files\: {0}.
 admin.message.indexrefreshed=Index refreshed
 admin.message.passwordsnomatch=Passwords do not match, please re-enter.
 admin.message.propertyfailure=Failure while processing property values\: {0}.
@@ -114,6 +118,7 @@ admin.smtp.caption.reply=Reply address
 admin.smtp.caption.user=Username
 admin.title=Configuration
 admin.title.cache=Clear Cache
+admin.title.exportcsv=Export Internal Database to CSV
 admin.title.recentchanges=Reload Recent Changes
 admin.title.refresh=Rebuild Search Index
 admin.title.spamfilter=Reload Spam Filter Patterns
@@ -155,6 +160,7 @@ common.exception.name=The requested value "{0}" was invalid. It may contain one 
 common.exception.notopic=Invalid or missing topic name.
 common.exception.novirtualwiki=Invalid or missing virtual wiki.
 common.exception.pseudotopic={0} is a special topic that cannot be viewed or edited as a normal topic.
+common.export=Export
 common.login=Login
 common.logout=Logout
 common.move=Move
